# PerturbAtlas

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: PerturbAtlas-K562-v1.0.pkl
examples/: Benchmark.ipynb  ExampleQueries.ipynb  QuickStart.ipynb
perturbatlas/: __init__.py  atlas.py  result.py
