[project]
name = "perturbatlas"
version = "1.0.0"
description = "A lightweight Python framework for perturbation signature retrieval and biologically interpretable program inference from transcriptomic gene sets."

authors = [
    { name = "Ufuk Solmaz" }
]

readme = "README.md"

license = { text = "MIT" }

requires-python = ">=3.9"

dependencies = [
    "pandas>=1.5"
]

keywords = [
    "bioinformatics",
    "transcriptomics",
    "perturb-seq",
    "crispr",
    "gene-expression",
    "computational-biology"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["perturbatlas*"]